# lumi-assistant-cli

./: .gitignore  2025-09-03-this-session-is-being-continued-from-a-previous-co.txt  ARCHITECTURE_REFACTORING.md  CLAUDE.md  DEVELOPMENT_PLAN.md  MISSING_FEATURES.md  QWEN.md  README.md  TODO.md  main.py  pyproject.toml  requirements.txt
proto/: lumi.proto
src/asr/: __init__.py  aliyun_asr.py  base.py
src/core/: audio_manager.py  operation_controller.py  service_manager.py
src/core/events/: event_bus.py  event_types.py  event_types_old.py
src/dialogue/: __init__.py  dialogue_manager.py  message.py  session_manager.py
src/interfaces/: __init__.py  cli_interface.py
src/interfaces/cli/: cli_interface.py
src/interfaces/grpc/: __init__.py  grpc_interface.py  grpc_server.py
src/llm/: __init__.py  base.py  enhanced_llm.py  openai_llm.py
src/logs/: app.log.2025-09-11
src/tts/: __init__.py  aliyun_tts.py  base.py
src/utils/: config_manager.py
src/utils/audio/: audio_player.py
src/utils/config/: config_manager.py
src/utils/logging/: logging_config.py
tests/unit/: test_llm.py
