[project]
name = "lumi-assistant"
version = "0.1.0"
description = "极简AI语音助手，专为CLI环境设计"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # 核心音频处理
    "numpy",
    "sounddevice",
    # 日志
    "colorlog",
    # 阿里云ASR需要的依赖
    "aiohttp",
    "websockets",
    # LLM集成
    "openai",
    "httpx",
    # 配置文件解析
    "PyYAML",
    "requests>=2.32.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=6.0",
    "pytest-asyncio>=0.18.0",
]
